# fleet-dashcam-portal

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/app/: audit.py  auth.py  config.py  db.py  main.py  seed.py  storage.py
backend/app/models/: __init__.py  audit.py  case.py  case_clip.py  clip.py  driver.py  event.py  tenant.py  truck.py  user.py
backend/app/routers/: audit.py  cases.py  clips.py  drivers.py  events.py  ingest.py  me.py  trucks.py
backend/app/schemas/: case.py  clip.py  driver.py  event.py  ingest.py  truck.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_add_user_preferences.py
backend/tests/: test_audit.py  test_auth.py  test_cases.py  test_clips.py  test_drivers.py  test_events.py  test_healthz.py  test_ingest.py  test_me_preferences.py  test_schema.py  test_seed.py  test_storage.py  test_trucks.py
docs/: architecture.md
docs/plans/: 2026-06-29-dashcam-portal-design.md
frontend/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/app/: router.tsx
frontend/src/components/: DevUserPicker.tsx  ErrorBoundary.tsx  Layout.test.tsx  Layout.tsx
frontend/src/hooks/: useAuditEmitter.ts  useCaseDetail.ts  useCaseMutations.ts  useCasesList.ts  useClipDetail.ts  useClipEvents.ts  useClips.ts  useCreateCase.ts  useDebouncedValue.ts  useDrivers.ts  useMe.ts  usePrefs.ts  useTriage.ts  (+5 more)
infra/: docker-compose.dev.yml
samples/: README.md
(+51 files in other folders)
